--- a/resources/yaml/player.yaml
+++ b/resources/yaml/player.yaml
@@ -2,7 +2,8 @@ name: Player
 texture: player.png
 
 health: 100
-speed: 100.0
-radius: 25.0
+speed: 100
+radius: 25
+size: [50, 50]
 weapon: weapon.yaml
 faction: 0
