--- a/resources/yaml/enemy.yaml
+++ b/resources/yaml/enemy.yaml
@@ -5,5 +5,6 @@ health: 100
 speed: 100
 radius: 25
 size: [50, 50]
-weapon: assault_rifle.yaml
+first_weapon: assault_rifle.yaml
+second_weapon: pistol.yaml
 faction: 1
