--- a/resources/yaml/player.yaml
+++ b/resources/yaml/player.yaml
@@ -5,5 +5,6 @@ health: 100
 speed: 100
 radius: 25
 size: [50, 50]
-weapon: hmg.yaml
+first_weapon: hmg.yaml
+second_weapon: shotgun.yaml
 faction: 0
