--- a/resources/yaml/enemy.yaml
+++ b/resources/yaml/enemy.yaml
@@ -5,6 +5,6 @@ health: 100
 speed: 100
 radius: 25
 size: [50, 50]
-first_weapon: assault_rifle.yaml
-second_weapon: pistol.yaml
+first_weapon: pistol.yaml
+second_weapon: knife.yaml
 faction: 1
