--- a/resources/yaml/player.yaml
+++ b/resources/yaml/player.yaml
@@ -5,6 +5,6 @@ health: 100
 speed: 100
 radius: 25
 size: [50, 50]
-first_weapon: hmg.yaml
-second_weapon: shotgun.yaml
+first_weapon: pistol.yaml
+second_weapon: knife.yaml
 faction: 0
