Revert "Changed .gitignore for Code::Blocks."
This reverts commit 7ed5c8ed8d3de5f49228ddffa744030fe7bd075e.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-# Code::Blocks files
-dungeon-gunner.cbp
-dungeon-gunner.depend
-dungeon-gunner.layout
+# Eclipse files
+.settings/
+.cproject
+.project
 
 # Binaries
 Debug/
